# Arknights_Launcher

./: .pnp.cjs  LICENSE  README.md  index.html  package.json  rustfmt.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.svelte  backgrounds.json  common.ts  globals.css  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  discord.rs  log.rs  main.rs  options.rs
src/views/: MainView.svelte  OptionsView.svelte
