[package]
name = "arknights_launcher"
version = "0.1.0"
description = "Launcher for Arknights with Discord Rich Presence Support"
authors = ["Eetu Kivelä <mail@karei.dev>"]
license = "BSD-2-Clause"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
runas = "1.0"
discord-sdk = "0.3.2"
once_cell = "1.17"
serde_json = "1.0"
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-open", "shell-open"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
